--- a/app/server/openapi/paths/stb_user_uuid.yml
+++ b/app/server/openapi/paths/stb_user_uuid.yml
@@ -20,7 +20,7 @@ StbUserUuidPaths:
         content:
           application/json:
             schema:
-              $ref: '../schemas/stb_user/entity.yml#/StbUser'
+              $ref: '../responses/user_responses.yml#/StbUserResponse'
       '400':
         $ref: '../responses/bad_input.yml#/BadInputResponse'
       '401':
@@ -62,7 +62,7 @@ StbUserUuidPaths:
         content:
           application/json:
             schema:
-              $ref: '../schemas/stb_user/entity.yml#/StbUser'
+              $ref: '../responses/user_responses.yml#/StbUserResponse'
       '400':
         $ref: '../responses/bad_input.yml#/BadInputResponse'
       '401':
